--- a/public/documentation.html
+++ b/public/documentation.html
@@ -8,7 +8,7 @@
       crossorigin="anonymous"
     />
     <meta charset="utf-8" />
-    <title>PokeCards</title>
+    <title>Movie API Documentation</title>
     <link
       rel="stylesheet"
       type="text/css"
@@ -19,7 +19,7 @@
   </head>
   <body>
 
-        <h1>Documentation</h1>
+        <h1>Documentation Instructions</h1>
         <p>Please find below instruction on how to use this API</p>
 
     <!-- script -->
