--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       type="text/css"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
     />
-    <link rel="stylesheet" type="text/css" href="dist/styles.min.css" />
+    <link rel="stylesheet" type="text/css" href="./css/styles.css" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
   </head>
   <body>
