--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       crossorigin="anonymous"
     />
     <meta charset="utf-8" />
-    <title>PokeCards</title>
+    <title>Myflix</title>
     <link
       rel="stylesheet"
       type="text/css"
@@ -19,7 +19,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
   </head>
   <body>
-        <h1>Home page. </h1>
+    <h1>Home page.</h1>
 
     <!-- script -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
